web-infras/parser/tests/fixtures/babel/es2015/object/invalid-property-initializer-1/output.txt
[SyntaxError]: Invalid shorthand property initializer (3,3)
3|  foo = 123
 | ^
